--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/BooksOrderSystem/favicon.ico" />
+    <link rel="icon" href="/vue3/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vuetify 3 Vite Preview</title>
-  <script type="module" crossorigin src="/BooksOrderSystem/assets/index.a0d1d4cb.js"></script>
-  <link rel="stylesheet" href="/BooksOrderSystem/assets/index.5c11e555.css">
+  <script type="module" crossorigin src="/vue3/assets/index.3391d80d.js"></script>
+  <link rel="stylesheet" href="/vue3/assets/index.feb2b4f1.css">
 </head>
 
 <body>
